WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184824
WebEvent fails to convert synthetic WebMouseEvent for automation
https://bugs.webkit.org/show_bug.cgi?id=184824
Summary
WebEvent fails to convert synthetic WebMouseEvent for automation
Timothy Hatcher
Reported
2018-04-20 09:44:07 PDT
The event factory has been missing the proper constructor for these synthetic events.
Attachments
Patch
(10.69 KB, patch)
2018-04-20 09:57 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Patch
(10.72 KB, patch)
2018-04-20 09:59 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2018-04-20 09:57:16 PDT
Created
attachment 338433
[details]
Patch
Timothy Hatcher
Comment 2
2018-04-20 09:58:38 PDT
rdar://problem/35377120
Timothy Hatcher
Comment 3
2018-04-20 09:59:16 PDT
Created
attachment 338434
[details]
Patch
EWS Watchlist
Comment 4
2018-04-20 10:00:23 PDT
Attachment 338434
[details]
did not pass style-queue: ERROR: Source/WebKit/Shared/NativeWebMouseEvent.h:42: "wtf/RetainPtr.h" already included at Source/WebKit/Shared/NativeWebMouseEvent.h:32 [build/include] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Timothy Hatcher
Comment 5
2018-04-20 10:33:25 PDT
(In reply to Build Bot from
comment #4
)
>
Attachment 338434
[details]
did not pass style-queue: > > > ERROR: Source/WebKit/Shared/NativeWebMouseEvent.h:42: "wtf/RetainPtr.h" > already included at Source/WebKit/Shared/NativeWebMouseEvent.h:32 > [build/include] [4] > Total errors found: 1 in 6 files > > > If any of these errors are false positives, please file a bug against > check-webkit-style.
This is a false positive. The other include is also conditional.
Blaze Burg
Comment 6
2018-04-20 13:05:16 PDT
Comment on
attachment 338434
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=338434&action=review
r=me
> Source/WebKit/ChangeLog:12 > + This affected WebDriver, and some events not being deliverd to the page.
Nit: delivered
WebKit Commit Bot
Comment 7
2018-04-20 13:12:13 PDT
Comment on
attachment 338434
[details]
Patch Clearing flags on attachment: 338434 Committed
r230849
: <
https://trac.webkit.org/changeset/230849
>
WebKit Commit Bot
Comment 8
2018-04-20 13:12:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug